# flexcn

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md
ci-scripts/: Jenkinsfile-Bracket-Test  Jenkinsfile-GitLab-Docker  bracketTestHTMLReport.py  generateHtmlReport.py
ci-scripts/docker/: Dockerfile.ci.ubuntu.18.04
ci-scripts/dsTesterDockerCompose/: docker-compose.tplt  flexcn-healthy-check.sh
docker/: Dockerfile.flexcn.rhel8  Dockerfile.flexcn.ubuntu18  Dockerfile.flexcn.ubuntu18.dev  docker-compose-basic-vpp-nrf.yaml  docker-compose-ueransim-vpp.yaml  docker-compose.dev.yaml  docker-compose.flexcn.yaml
docs/: FEATURE_SET.md  Getting_started.md
docs/inputs/: supported_inputs.md
docs/openapi/: nbi_4g.yaml  nbi_5g.yaml  nbi_PolicyControl.yaml
etc/: flexcn.conf
scripts/: build_image.sh  entrypoint.sh  pull_5g_testbed.sh  query.sh  subscribe.sh
src/api-server/: CMakeLists.txt  flexcn-api-server.cpp  flexcn-api-server.h  flexcn-http2-server.cpp  flexcn-http2-server.h
src/api-server/api/: EventNotifyApi.cpp  EventNotifyApi.h  FlexCNStat.cpp  FlexCNStat.h  NorthBound4GApi.cpp  NorthBound4GApi.h  NorthBound5GApi.cpp  NorthBound5GApi.h
src/api-server/impl/: EventNotifyApiImpl.cpp  EventNotifyApiImpl.h  FlexCNStatImpl.cpp  FlexCNStatImpl.h  NorthBound4GApiImpl.cpp  NorthBound4GApiImpl.h  NorthBound5GApiImpl.cpp  NorthBound5GApiImpl.h
src/api-server/model/: AccessType.cpp  AccessType.h  AdditionalQosFlowInfo.cpp  AdditionalQosFlowInfo.h  Ambr.cpp  Ambr.h  Arp.cpp  Arp.h  AtsssCapability.cpp  AtsssCapability.h  BackupAmfInfo.cpp  BackupAmfInfo.h  Bearer.cpp  Bearer.h  Cause.cpp  Cause.h  ChangeItem.cpp  ChangeItem.h  ChangeType.cpp  ChangeType.h  DddStatus.cpp  DddStatus.h  DddTrafficDescriptor.cpp  DddTrafficDescriptor.h  DnaiChangeType.cpp  DnaiChangeType.h  DnnSelectionMode.cpp  DnnSelectionMode.h  DnnUpfInfoItem.cpp  DnnUpfInfoItem.h  Dynamic5Qi.cpp  Dynamic5Qi.h  EbiArpMapping.cpp  EbiArpMapping.h  Ecgi.cpp  Ecgi.h  EpsBearerInfo.cpp  EpsBearerInfo.h  EpsInterworkingIndication.cpp  EpsInterworkingIndication.h  (+228 more)
src/common/: CMakeLists.txt  comm_ops.cpp  comm_ops.hpp  flexcn.h  logger.cpp  logger.hpp
src/common/utils/: CMakeLists.txt  api_conversions.cpp  api_conversions.hpp  conversions.cpp  mime_parser.cpp  pid_file.cpp
src/flexcn_app/: CMakeLists.txt  flexcn_app.cpp  flexcn_app.hpp  flexcn_client.cpp  flexcn_client.hpp  flexcn_config.cpp  flexcn_config.hpp  flexcn_event.cpp  flexcn_event.hpp  flexcn_event_sig.hpp  flexcn_profile.cpp  flexcn_profile.hpp  flexcn_subscription.cpp  flexcn_subscription.hpp  iApp.hpp  monitoringApp.hpp  task_manager.cpp  task_manager.hpp
src/iapps/: CMakeLists.txt
src/iapps/amf5g/: CMakeLists.txt  amf_app.cpp  amf_app.hpp  cassandra_amf_5g_db.cpp  cassandra_amf_5g_db.hpp  database_amf_5g_wrapper.hpp  local_amf_5g_db.cpp  local_amf_5g_db.hpp
src/iapps/service4g/: CMakeLists.txt  app4G.cpp  app4G.hpp  cassandra_4g_db.cpp  cassandra_4g_db.hpp  database_wrapper.hpp  local_db.cpp  local_db.hpp  service4G.cpp  service4G.hpp
src/iapps/smf5g/: CMakeLists.txt  cassandra_5g_db.cpp  cassandra_5g_db.hpp  database_5g_wrapper.hpp  local_5g_db.cpp  local_5g_db.hpp  smf_app.cpp  smf_app.hpp  smf_data-fusion.cpp
src/oai-flexcn/: main.cpp  options.cpp
src/python/: CMakeLists.txt  flexcn_lib.cpp
test/: test_4g_adding_bearer.sh
